<resources>
    <string name="app_name">Football App</string>

    <string name="dateTime">%1$s | %2$s</string>
    <string name="score">%1s - %2$s</string>

    <string-array name="league">
        <item>English Premier League</item>
        <item>French Ligue 1</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>Spanish La Liga</item>
        <item>American Mayor League</item>
        <item>Protugeuese Premiera Liga</item>
        <item>Australian A League</item>
        <item>Scotish Premier League</item>
        <item>English League 1</item>
    </string-array>

    <string-array name="league_id">
        <item>4328</item>
        <item>4334</item>
        <item>4331</item>
        <item>4332</item>
        <item>4335</item>
        <item>4346</item>
        <item>4344</item>
        <item>4356</item>
        <item>4330</item>
        <item>4396</item>
    </string-array>

    <array name="badge_image">
        <item>@drawable/english_premier_league</item>
        <item>@drawable/french_ligue_1</item>
        <item>@drawable/german_bundesliga</item>
        <item>@drawable/italian_serie_a</item>
        <item>@drawable/spanish_la_liga</item>
        <item>@drawable/american_mayor_league</item>
        <item>@drawable/portugeuese_premiera_liga</item>
        <item>@drawable/australian_a_league</item>
        <item>@drawable/scotish_premier_league</item>
        <item>@drawable/english_league_1</item>
    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="premier_league">Premier League</string>
    <string name="formed_year">Formed Year</string>
    <string name="england">England</string>
    <string name="country">Country</string>
    <string name="website">Website</string>
    <string name="social_media">Social Media</string>
    <string name="description">Description</string>
    <string name="match_schedule">Match Schedule</string>
    <string name="check_match_schedule">  Check Match Schedule  </string>
    <string name="doublecolon">:</string>
    <string name="search">Search</string>
    <string name="_0_0">0 - 0</string>
    <string name="goals">Goals</string>
    <string name="red_card">Red Card</string>
    <string name="yellow_card">Yellow Card</string>
    <string name="formation">Formation</string>
    <string name="goalkeeper">Goalkeeper</string>
    <string name="defense">Defense</string>
    <string name="midfield">Midfield</string>
    <string name="forward">Forward</string>
    <string name="leagues">Leagues</string>
    <string name="favorites">Favorites</string>
    <string name="add_to_favorite">Added to Favorite</string>
    <string name="remove_favorite">Remove from Favorite</string>
    <string name="teams">Teams</string>
    <string name="team_name">Team Name</string>
    <string name="total">Total</string>
    <string name="win">Win</string>
    <string name="draw">Draw</string>
    <string name="lose">Lose</string>
    <string name="play">Play</string>
    <string name="team_description">Team Description</string>
    <string name="stadium_description">Stadium Description</string>
    <string name="website_social_media">Website and Social Media</string>

    <string-array name="fragment_match">
        <item>Last Match</item>
        <item>Next Match</item>
    </string-array>

    <string-array name="title_fav_pager">
        <item>Match</item>
        <item>Team</item>
    </string-array>

    <string-array name="categories">
        <item>Schedule</item>
        <item>Teams</item>
        <item>Standing</item>
    </string-array>

    <array name="categories_icon">
        <item>@drawable/calendar</item>
        <item>@drawable/stadium</item>
        <item>@drawable/trophy</item>
    </array>
</resources>
