<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".features.Standings.StandingsActivity">

    <include layout="@layout/loading"/>

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorGreyLight">

            <TextView
                android:id="@+id/tv_team_name_standings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.33"
                android:maxLines="1"
                android:text="@string/team_name"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/tv_total_standings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/total" />

            <TextView
                android:id="@+id/tv_win_standings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/win" />

            <TextView
                android:id="@+id/tv_draw_standings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/draw" />

            <TextView
                android:id="@+id/tv_lose_standings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/lose" />

            <TextView
                android:id="@+id/tv_play_standings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/play" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_standings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/container"
        tools:listitem="@layout/item_standings" />

</RelativeLayout>